SERVER-23073 Reliably detect concurrent changes to $out collection.

A $out stage will write to a temporary collection, and then rename into
the target collection. If the original collection is sharded, has its
options changed, or changes its indexes during processing, the
aggregation should fail.

This change removes any race conditions around detecting these changes.